--- a/grc338/restaurantmenu/index.html
+++ b/grc338/restaurantmenu/index.html
@@ -64,7 +64,7 @@
     </li>
 
     <li>
-        <h4>Caesar<h4>
+        <h4>Caesar</h4>
          <p>hearts of romaine, garlic croutons, spanish white anchovies, parmesano reggiano</p>
          <p>$8.00</p>
      </li>
@@ -79,6 +79,7 @@
 
 <h3>Entrees</h3>
 
+<ul>
     <li>
         <h4>Pan Roasted Chicken Breast</h4>
         <p>artichoke risotto cake, grilled asparagus, mushroom marsala cream sauce and almond gremolata</p>
