--- a/grc338/website-mobile-first/index.html
+++ b/grc338/website-mobile-first/index.html
@@ -31,7 +31,7 @@
                   <h2>Welcome!</h2>
 
                 </header> 
-                    <p class = "bottom">BurnsBucha Kombucha can be a healthy alternative to soft drinks, It contains probiotics that can support gut health. </p>
+                    <p>BurnsBucha Kombucha can be a healthy alternative to soft drinks, It contains probiotics that can support gut health. </p>
                     
                     <p> <img src="kombuchafruit.jpg" alt="[This is a jpg image that consist of fruit, citrus', and spice that are attributes to the falvor of kombucha: lemon, strawberry, and ginger]"> </p>
 
