--- a/grc339/digital-magazine-proposal/index.html
+++ b/grc339/digital-magazine-proposal/index.html
@@ -36,18 +36,18 @@
             
 			<h3>Visual references</h3>
 			
-			<p><a href="https://www.pinterest.com/shelbrahhh8/sustainable-living/">Link to the reference board.</a></p> 
+			<p><a href="https://www.pinterest.com/shelbrahhh8/sustainable-living/">Pinterest Board.</a></p> 
 
 			<h3>Color palette</h3>
 			
-			<p><a href="https://coolors.co/606c38-283618-fefae0-dda15e-bc6c25">Link to the color palette.</a></p>
+			<p><a href="https://coolors.co/606c38-283618-fefae0-dda15e-bc6c25">Coolors color pallete</a></p>
 
 
 			<h3>Type families</h3>
 
 			<ul>
-				<li><a href="https://fonts.adobe.com/fonts/monarcha">Name of the type family.</a></li> 
-				<li><a href="https://fonts.adobe.com/fonts/sonar-sans">Name of the type family.</a></li> 
+				<li><a href="https://fonts.adobe.com/fonts/monarcha">Monarcha.</a></li> 
+				<li><a href="https://fonts.adobe.com/fonts/sonar-sans">Sonar-Sans</a></li> 
 				
 			</ul>
 
