--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -16,7 +16,7 @@
         <body>
             <div class="container">
                 <header>
-                    <h1> <img src="smallfingerprint.png" alt="A green finger print with the title of blog publication"> </h1> <!-- ★ Please use a proper alt attribute.-->
+                    <h1> <img src="The green print.png" alt="A green finger print with the title of blog publication"> </h1> <!-- ★ Please use a proper alt attribute.-->
                     
                     <nav>
                         <ul> <!-- ★ Use as many sections as you want, but replace the dashed lines with actual names for the sections of the publication. You may keep them all linked to the pound symbol, though. -->
