--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -30,7 +30,7 @@
                 </header>
                 <article>
                             <figure>
-                                <img src="tablas creek viticulturist.JPG" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                <img src="tasting room sign.JPG" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                                 <figcaption>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
                             </figure>
                             <h2>Regenrative Organic Certified Wineries</h2>
@@ -49,7 +49,7 @@
                                 <p>Felis bibendum ut tristique et egestas quis ipsum suspendisse. Mattis rhoncus urna neque viverra. Orci eu lobortis elementum nibh tellus molestie nunc non blandit. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Ac auctor augue mauris augue neque gravida. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. Viverra vitae congue eu consequat. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Imperdiet nulla malesuada pellentesque elit eget. A arcu cursus vitae congue. Tortor at risus viverra adipiscing.</p>
 
                                 <figure>
-                                    <img src="1st vine.jpg" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
+                                    <img src="owls at tablas creek.JPG" alt="★ Don’t forget your to write a proper alt attribute (without the star).">
                                     <figcaption>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
                                 </figure>
                     
@@ -73,15 +73,59 @@
                                     Locally sourced food can be beneficial for both eco- and health-conscious restaurants. It can help improve your restaurant’s reputation, support local agriculture, and provide guests with wholesome, healthy ingredients. If you’re wondering what locally sourced means and what to consider before making the decision to serve locally sourced food, read below to learn more.</p>
                         </a>    
                     </section>
-
-                    <section> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
+                    <section class=" Secondary 2"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
+                        <a href="#">
+                            <figure>
+                                <img src="clothing.png" alt="Vegtables">
+                            </figure>
+                                <h3>Sustaianable Brands</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                        </a>    
+                    </section>
+                    <section class=" Secondary 3"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
+                        <a href="#">
+                            <figure>
+                                <img src="sustainable_packaging.jpg" alt="Vegtables">
+                            </figure>
+                                <h3>Packaging</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                        </a>    
+                    </section>
+                    <section class=" Secondary 4"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
+                        <a href="#">
+                            <figure>
+                                <img src="Paper.jpg" alt="Paper making materials, woman holding the peper with paper flower petals">
+                            </figure>
+                                <h3>Make your own Paper</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                        </a>    
+                    </section>
+                    <section class=" Secondary 5"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
+                        <a href="#">
+                            <figure>
+                                <img src="tablas creek viticulturist.JPG" alt="tablas creek viticulturist jordy lonborg, suited up for beekeeping picture">
+                            </figure>
+                                <h3>Local Honey</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                        </a>    
+                    </section>
+                </main>
+                  <!--  <section>  Example of a teaser without image.  You may want to give it a third class.
                         <a href="#">
                                 <h3>Sustainable Brands</h3>
                                 <p>
                                     Paragraph on sustainability
                                 </p>
                         </a>    
-                    </section>
+                    </section> -->
                     
                 </aside>   
 
