--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -20,10 +20,10 @@
                     
                     <nav>
                         <ul> <!-- ★ Use as many sections as you want, but replace the dashed lines with actual names for the sections of the publication. You may keep them all linked to the pound symbol, though. -->
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Featured</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Newsletter</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="mainstory.html">Featured</a></li>
+                            <li><a href="photogallery.html">Gallery</a></li>
+                            <li><a href="newsletter.html">Newsletter</a></li>
                         
                         </ul>
                     </nav>
@@ -65,11 +65,11 @@
                         </a>    
                     </section>
                     <section class=" Secondary 3"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
-                        <a href="#">
+                        <a href="photogallery.html">
                             <figure>
                                 <img src="sustainable_packaging.jpg" alt="Vegtables">
                             </figure>
-                                <h3>Packaging</h3>
+                                <h3>Photo Gallery</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                 </p>
