--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -20,10 +20,10 @@
                     
                     <nav>
                         <ul> <!-- ★ Use as many sections as you want, but replace the dashed lines with actual names for the sections of the publication. You may keep them all linked to the pound symbol, though. -->
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Featured</a></li>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Newsletter</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="mainstory.html">Featured</a></li>
+                            <li><a href="photogallery.html">Gallery</a></li>
+                            <li><a href="Newsletter.html">Newsletter</a></li>
                           
                         </ul>
                     </nav>
