--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -48,7 +48,7 @@
                             </figure>
                                 <h3>Locally Sourced Foods</h3>
                                 <p>
-                                    Locally sourced food can be beneficial for both eco- and health-conscious restaurants. It can help improve your restaurant’s reputation, support local agriculture, and provide guests with wholesome, healthy ingredients. If you’re wondering what locally sourced means and what to consider before making the decision to serve locally sourced food, read below to learn more.
+                                    Locally sourced foods epitomize a sustainable and community-driven approach to nourishment. They encompass a rich tapestry of produce, meats, dairy, and artisanal goods cultivated or crafted within a region, often traveling short distances from farm to table. Beyond their tantalizing flavors and freshness, these foods symbolize a commitment to...
                                 </p>
                         </a>    
                     </section>
@@ -60,18 +60,18 @@
                             </figure>
                                 <h3>Sustaianable Brands</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Sustainable brands stand as beacons of innovation and responsibility in an era where ethical practices are increasingly paramount. These forward-thinking companies prioritize not only their bottom line but also the planet and its inhabitants. They weave sustainability into the very fabric of their operations, considering the environmental...
                                 </p>
                         </a>    
                     </section>
                     <section class=" Secondary 3"> <!-- ★ Example of a teaser without image.  You may want to give it a third class. -->
                         <a href="photogallery.html">
                             <figure>
-                                <img src="sustainable_packaging.jpg" alt="Vegtables">
+                                <img src="chickens.jpg" alt="Vegtables">
                             </figure>
                                 <h3>Photo Gallery</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Our curated gallery of images serves as a visual companion to our blog content. Explore our image gallery to delve deeper into the essence of our narratives and witness the beauty and authenticity of our featured subjects.
                                 </p>
                         </a>    
                     </section>
@@ -82,7 +82,7 @@
                             </figure>
                                 <h3>Make your own Paper</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Making paper involves a process of transforming plant fibers, often from wood pulp or recycled materials, into thin sheets. Initially, these fibers are mixed with water to create a pulp, which is then...
                                 </p>
                         </a>    
                     </section>
@@ -93,7 +93,7 @@
                             </figure>
                                 <h3>Local Honey</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Producing local honey involves the fascinating process of honeybees collecting nectar from nearby flowers. Bees gather the nectar and transport it to their hive's honeycomb cells...
                                 </p>
                         </a>    
                     </section>
@@ -102,9 +102,8 @@
                    <aside>
                     <section class="tertiary">
                     <a href="#">
-                    <h3> Fun </h3>
-                    <p>Hello......
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <h3> About me</h3>
+                    <p>As the creator of Green Print, I founded this platform out of a deep passion for sustainability and a fervent desire to inspire positive change. I envisioned a space where individuals could find practical guidance, insightful resources, and empowering stories to embrace an eco-conscious lifestyle. Crafting each article and curating content has been a labor of love aimed at fostering a community dedicated to preserving our planet...
                     </p>
                     </a>
                 </section>
@@ -112,8 +111,7 @@
                 <section class="tertiary">
                     <a href="#">
                     <h3> Glass VS Cans</h3>
-                    <p>Hello......
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p>The choice between cans and plastic packaging often centers on their environmental impact and recyclability. Aluminum cans are highly recyclable and efficient for beverages, but their production can be energy-intensive. Plastic, while versatile, poses challenges due to its long degradation period and environmental harm if not properly disposed. Balancing factors like recyclability rates and environmental impact guides the...
                     </p>
                     </a>
                 </section>
@@ -121,8 +119,7 @@
                 <section class="tertiary">
                     <a href="#">
                     <h3> Weather patterns along California</h3>
-                    <p>Hello......
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p>California experiences diverse weather patterns due to its extensive geographical range and varied landscapes. Along the coast, regions like San Francisco often encounter cool, foggy summers influenced by marine layers. Moving inland, areas such as Los Angeles and San Diego typically enjoy Mediterranean climates, characterized by mild, wet winters and hot, dry summers. As one moves further inland towards the Central Valley...
                     </p>
                     </a>
                 </section>
@@ -130,8 +127,7 @@
                 <section class="tertiary">
                     <a href="#">
                     <h3>Recipies</h3>
-                    <p>Hello......
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <p>At Green Print, we believe in making sustainability delicious! Our fun recipes aren't just about tantalizing taste buds; they're about celebrating the bounty of nature while reducing our environmental impact. From vibrant plant-based dishes bursting with flavor to inventive recipes that minimize food waste, each culinary creation aims to showcase the joy of conscious eating. We take pride in offering recipes that not only excite the palate but also align with our commitment to a greener lifestyle...
                     </p>
                     </a>
                 </section>
